[gd_scene load_steps=2 format=3 uid="uid://7ujfv5f762dk"]

[ext_resource type="Script" uid="uid://bkyglq3ssnftb" path="res://ui/battle_mode_multiplier/battle_multiplier_feedback.gd" id="1_1q4jo"]

[node name="BattleMultiplierFeedback" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1q4jo")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -33.0
offset_right = 88.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CorrectLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 36
text = "Correct"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="AnswerLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "The meaning of this Ilocano Word is Name"

[node name="MultiplierAppliedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.796875, 0.796875, 0.796875, 1)
theme_override_font_sizes/font_size = 16
text = "Multiplier Applied"
horizontal_alignment = 1
uppercase = true
